add dummy variables to config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,20 +1,20 @@
 [Polarion]
 url = https://polarion.example.com
-user =
-token =
+user = dummy
+token = dummy
 
 [Email]
 smtp_server = smtp.example.com
 smtp_port = 587
 sender_email =
-sender_password =
-recipient_email =
+sender_password = dummy
+recipient_email = dummy
 
 [JFrog]
 url = https://jfrog.example.com/artifactory/
-username =
-password =
-api_key =
+username = dummy
+password = dummy
+api_key = dummy
 
 [Webpage]
 url = https://dummy-webpage.com/logs
