--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ watchdog>=3.0.0
 # Build Tool (for creating executable)
 pyinstaller>=6.0.0
 
+# Web Server (for test status dashboard)
+flask>=3.0.0
+
 # Notes:
 # - tkinter is included with Python standard library (GUI framework)
 # - All other dependencies (configparser, threading, smtplib, etc.) are Python built-ins
